--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,11 @@ dependencies {
     compile 'com.dinuscxj:circleprogressbar:1.1.1'
 
     /*水波纹*/
-    compile 'com.github.traex.rippleeffect:library:1.3'
+    /*compile 'com.github.traex.rippleeffect:library:1.3'*/
 
     /*JSON解析*/
     compile 'com.alibaba:fastjson:1.2.17'
+
+    /*请求和下载*/
+    /*compile 'com.koushikdutta.async:androidasync:2.+'*/
 }
