--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MusicTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".activity.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,5 +22,6 @@
         </activity>
 
         <activity android:name="com.itant.musichome.activity.AboutActivity"/>
+        <activity android:name="com.itant.musichome.activity.TaskActivity"/>
     </application>
 </manifest>
