--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,37 +26,33 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-
     compile 'org.xutils:xutils:3.3.38'
-
     /*按钮*/
     compile 'com.beardedhen:androidbootstrap:2.3.0'
-
     /*加载*/
     compile 'com.wang.avi:library:2.1.3'
-
     /*下载进度*/
     compile 'com.dinuscxj:circleprogressbar:1.1.1'
-
     /*水波纹*/
     /*compile 'com.github.traex.rippleeffect:library:1.3'*/
-
     /*JSON解析*/
     compile 'com.alibaba:fastjson:1.2.17'
-
     /*请求和下载*/
     /*compile 'com.koushikdutta.async:androidasync:2.+'*/
     compile 'com.loopj.android:android-async-http:1.4.9'
-
     /*EventBus*/
     compile 'org.greenrobot:eventbus:3.0.0'
-
     /*上拉加载更多*/
     compile 'com.wuxiaolong.pullloadmorerecyclerview:library:1.1.1'
-
     /*友盟统计*/
     compile 'com.umeng.analytics:analytics:latest.integration'
+    compile files('libs/nineoldandroids-2.4.0.jar')
+
+    /*ViewPagerIndicator*/
+    compile 'com.shizhefei:ViewPagerIndicator:1.1.3'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
 }
