--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "com.itant.musichome"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
-        versionCode 6
-        versionName "1.5"
+        versionCode 9
+        versionName "1.9"
 
 
 
@@ -20,8 +20,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-
 }
 
 
@@ -55,4 +53,12 @@ dependencies {
     compile 'com.shizhefei:ViewPagerIndicator:1.1.3'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.2.1'
+
+    /*雪花*/
+    compile 'com.github.jetradarmobile:android-snowfall:1.1.6'
+    //3.4.7-aar：具务必查看下面注释[1]
+    compile 'cn.bmob.android:bmob-sdk:3.4.7-aar'
+    //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'cn.bmob.android:http-legacy:1.0'
 }
